# Control-System-Tools

./: .gitignore  AGENTS.md  CLAUDE.md  PRE_MIGRATION_CHECK.sh  PROJECT_STARTUP_CONTEXT.md  README.md  STRUCTURE_SUMMARY.md  general_change_log.md  main.py  pyproject.toml  rag
.claude/: settings.json
.github/workflows/: pages.yml
control-standards/: .gitignore  QUICK_START.md  README.md  STRUCTURE_SUMMARY.md
control-standards/exports/: README.md
control-standards/governance/: README.md  decision_log.md  design_change_policy.md  promotion_checklist_drafts_to_rag.md  release_notes.md
control-standards/rag/: MIGRATION_SUMMARY_20260115_221742.md
control-standards/templates/: README.md
control-standards/work/: README.md
data/: README.md
data/examples/: io_list_example.csv  twin_sync_example.csv
data/standards_tables/: README.md
docs/: Gemfile  _config.yml  index.md
docs/_data/: field_checklists.yml  glossary.yml  lifecycle_stage_urls.yml  lifecycle_stages.yml  (+5 more)
governance/: AI_WORKFLOW.md  CONTENT_STANDARDS.md  ENGINEERING_STANDARDS.md  PROJECT_ORGANIZATION.md  ROADMAP.md
planning/: 2026-03-05_12-08-09_project-folder-organization-plan.md  2026-03-05_12-22-49_reorg-execution-report.md  2026-07-10-external-site-review.md  2026-07-11-standards-accuracy-review.md  2026-07-12-ai-ml-control-systems-presentation-plan.md  2026-07-12-design-page-review.md  2026-07-13-whole-project-architecture-recommendations.md  2026-07-16-phase50-hardening-hygiene-plan.md  2026-07-17-ai-integration-7page-build-plan.md  2026-07-17-phase50-13-classification-vocabulary.md  2026-07-17-phase52-ui-ux-content-upgrade-recommendations.md  PLC_IPC_Official_Reference_Links.xlsx  ground_earth_visual.md  how_to_use.md  recommendation.md  safety_software_stack.md
project_state/: change_log.md  environment.md  how_to.md  project_state.md
tools/: README.md  _phase26_batch6_add_redirects.py  _phase26_batch6_update_links.py  check_internal_links.py  fix_ai_boundaries.py  generate_ai_method_register.py  generate_rag_tree.py  generate_site_templates.py  generate_standards_overview.py  project_automator.py  release_check.py  setup_hooks.sh  validate_ai_boundaries.py  validate_corpus_quality.py  validate_reorg.sh
(+1226 files in other folders)
