[project]
name = "control-system-tools"
version = "0.2.0"
description = "Control systems engineering toolkit: standards-cited calculators, motion utilities, and panel/commissioning generators"
readme = "README.md"
requires-python = ">=3.12"
# Core package (src/cst) is stdlib-only by design.
# pymupdf/pypdf are consumed only by tools/fe_study/ document extraction.
dependencies = [
    "pymupdf>=1.27.2",
    "pypdf>=6.8.0",
]

[project.scripts]
cst = "cst.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
